[package]
name = "cld1015-mpm210h"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
visa-rs = { git = "https://github.com/TsuITOAR/visa-rs.git" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
csv = "1.2"
chrono = "0.4"